THRIFT-3128 Go generated code produces name collisions between services Client: Go Patch: Adam Beberg